# gtd

./: .gitignore  Caddyfile  GO-VS-PYTHON.md  Makefile  PHASE1.md  PROJECT.md  docker-compose.yaml  pyproject.toml
.cursor/rules/: global.mdc
backend/: .air.toml  Dockerfile  Dockerfile.dev  README.md  go.mod  go.sum  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/api/: audio.go  inbox.go
backend/internal/database/: gorm.go
backend/internal/domain/: audio.go  inbox.go
backend/internal/repository/: audio.go  inbox.go
backend/internal/service/: audio.go  inbox.go  storage.go
backend/pkg/storage/: minio.go
backend/scripts/: generate-swagger.sh
backend/src/: main.py
backend/src/api/: auth.py  inbox.py
backend/src/auth/: manager.py
backend/src/core/: settings.py
backend/src/models/: inbox.py  user.py
backend/src/repository/: base.py
backend/src/schemas/: user.py
backend/src/service/: file.py
deployment/: backend.yml  frontend.yml  ingress.yml  minio.yml  namespace.yml  postgres.yml  redis.yml  transcription.yml
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.transcription
example/: test_email.py
frontend/: Dockerfile  Dockerfile.dev  README.md  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Draggable.tsx  Droppable.tsx  InboxItem.tsx  InboxItemsList.tsx  KanbanCard.tsx  KandanColumn.tsx  LabelField.tsx  Loading.tsx
frontend/src/context/: AuthContext.tsx  useTheme.tsx
frontend/src/hooks/: useAuth.tsx  (+5 more)
mobile/: .gitignore  App.tsx  README.md  app.config.js  app.json  babel.config.js  eas.json  env.d.ts  global.css  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
mobile/app/: +not-found.tsx  _layout.tsx  index.tsx
mobile/components/: Camera.tsx  CustomAlertDialog.tsx  CustomToast.tsx  Icons.tsx  Record.tsx  ThemeSelect.tsx  TopNavigation.tsx
mobile/context/: AuthContext.tsx
mobile/hooks/: useAudioPlayer.tsx  useAudioRecorder.tsx  useCustomAlertDialog.tsx  useLogForm.ts  useTranslation.ts
mobile/types/: auth.ts
mobile/utils/: api.tsx
python/: Dockerfile  README.md  benchmark_app.py  pyproject.toml  requirements.txt
python/migrations/: env.py
python/migrations/versions/: 02dd815769bb_init_commit.py  c60a85d339dd_init_db.py
python/src/: main.py
python/src/api/: auth.py  inbox.py
python/src/auth/: backend.py  manager.py  oauth.py
python/src/core/: database.py  dependencies.py  settings.py
python/src/core/storage/: inteface.py  minio.py
python/src/models/: base.py  inbox.py  user.py
python/src/repository/: base.py  inbox.py  interface.py  soft_delete_base.py
python/src/schemas/: inbox.py  user.py
python/src/service/: file.py
python/src/tests/: conftest.py
python/src/tests/e2e/: test_inbox_flow.py
python/src/tests/integration/: test_inbox.py
python/src/tests/unit/api/: test_inbox_api.py
python/src/tests/unit/repository/: test_base.py
services/backend/: README.md  pyproject.toml
services/backend/migrations/: env.py
services/backend/migrations/versions/: 073bf9a24d59_message.py  09b6c1c852b6_init_db.py  3e1e8dfcef1e_message.py  6a7e23771287_migration_message.py  75404c1ae801_added_database_token_saving.py  7590a802d08f_message.py  86cf50278676_init_commit.py  a02e15334296_message.py  ac6c9ec1758e_message.py  b7863d31752e_message.py  c60a85d339dd_init_db.py
services/backend/src/: main.py
services/backend/src/api/: __init__.py  action.py  audio.py  auth.py  image.py  inbox.py  project.py  test.py
services/backend/src/auth/: backend.py  manager.py  oauth.py
services/backend/src/core/: database.py  dependencies.py  repository.py  service.py  settings.py  util.py
services/backend/src/features/action/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/audio/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/extended_inbox/: model.py  repository.py  schemas.py  service.py
services/backend/src/features/image/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/inbox/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/project/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/reference/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/reference_tag/: model.py
services/backend/src/features/someday/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/tags/: api.py  model.py  repository.py  schemas.py  service.py
services/backend/src/features/user/: api.py
services/backend/src/models/: __init__.py  action.py  audio.py  base.py  image.py  inbox.py  project.py  reference.py  someday.py  tags.py  user.py
services/backend/src/models/base/: __init__.py  search.py
services/backend/src/models/views/: inbox.py
services/backend/src/repository/: action.py  audio.py  base.py  images.py  inbox.py  inbox_view.py  interface.py  project.py  soft_delete_base.py
services/backend/src/schemas/: action.py  inbox.py  project.py
services/backend/src/service/: audio_transcription_result.py  file.py
services/backend/src/tests/: conftest.py
services/backend/src/tests/integration/: test_inbox.py
services/backend/src/tests/unit/api/: test_inbox_api.py
services/backend/src/tests/unit/repository/: test_base.py  test_inbox_repository.py
services/transcription/: pyproject.toml
services/transcription/app/: main.py
shared/: pyproject.toml
shared/src/gtd_shared/core/: database.py  settings.py
shared/src/gtd_shared/core/queue/: interface.py  processor.py  redis.py
shared/src/gtd_shared/core/storage/: inteface.py  minio.py
shared/src/gtd_shared/services/transcription/: __init__.py
test/: README.md  app.json  package-lock.json  package.json
test/app/: _layout.tsx  index.tsx
test/components/: Icons.tsx
test/context/: AuthContext.tsx
test/utils/: color.tsx
(+49 files in other folders)
