[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtd-backend"
version = "0.1.0"
description = "GTD Backend"
authors = [
    {name = "Braeden Norman", email = "braeden.norman6@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "asyncpg>=0.28.0",
    "aioboto3>=11.0.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=23.1.0",
    "httpx>=0.24.0",
    "python-multipart>=0.0.6",
    "fastapi-users[sqlalchemy,oauth]>=12.1.0",
    "gtd-shared",
    "sqlmodel>=0.0.24",
    "itsdangerous>=2.2.0",
    "authlib>=1.5.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

# [project.optional-dependencies]
# dev = [
#     "pytest>=7.3.1",
#     "pytest-asyncio>=0.21.0",
#     "black>=23.3.0",
#     "isort>=5.12.0",
#     "mypy>=1.3.0",
#     "ruff>=0.0.270",
#     "types-sqlalchemy>=1.4.0",
#     "aiosqlite>=0.20.0",
#     "pytest-cov>=4.0.0",
#     "pytest-watcher>=0.4.3"
# ]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "prospector[with-everything]>=1.17.1",
    "pytest>=8.3.5",
    "radon>=5.1.0",
    "ruff>=0.11.10",
    "wily>=1.25.0",
]
